# decompose-to-systemd

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
decompose_to_systemd/: __init__.py  __main__.py  cli.py  convert.py
decompose_to_systemd/templates/: template.service.jinja
